--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <h2>Education</h2>
 
         <div class="education-item">
-            <h3>Perusing Master of Technology in Computer Science</h3>
+            <h3>Pursuing Master of Technology in Computer Science</h3>
             <p><strong>SRM University</strong></p>
             <p><strong>Year of Post Graduation: Expected 2026</strong></p>
           <!--  <p><strong>CGPA - 7.66</strong></p> -->
